syntax = "proto3";

package lattice.daemon.v1;

import "types.proto";

// ============================================================================
// NodeService - Local node identity and status
// ============================================================================

service NodeService {
  rpc GetStatus(Empty) returns (NodeStatus);
  rpc SetName(SetNameRequest) returns (Empty);
  rpc Subscribe(Empty) returns (stream NodeEvent);
}

// ============================================================================
// StoreService - Store management
// ============================================================================

service StoreService {
  rpc Create(CreateStoreRequest) returns (StoreRef);
  rpc List(ListStoreRequest) returns (StoreList);
  rpc GetStatus(StoreId) returns (StoreMeta);
  rpc GetDetails(StoreId) returns (StoreDetails);
  rpc Delete(DeleteStoreRequest) returns (Empty);
  rpc SetName(SetStoreNameRequest) returns (Empty);
  rpc GetName(StoreId) returns (StoreNameResponse);
  rpc Sync(StoreId) returns (Empty);
  rpc Debug(StoreId) returns (DebugInfo);
  rpc History(HistoryRequest) returns (HistoryResponse);
  rpc AuthorState(AuthorStateRequest) returns (AuthorStateResponse);
  rpc OrphanCleanup(StoreId) returns (CleanupResult);
  rpc SystemList(StoreId) returns (SystemListResponse);
  rpc ListPeers(StoreId) returns (PeerList);
  rpc RevokePeer(RevokePeerRequest) returns (Empty);
  rpc GetPeerStrategy(StoreId) returns (PeerStrategyResponse);
  
  // Root Store Operations
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Invite(StoreId) returns (InviteToken);
}

// ============================================================================
// DynamicStoreService - Store-specific operations via reflection
// ============================================================================

service DynamicStoreService {
  // Command execution
  rpc Exec(ExecRequest) returns (ExecResponse);
  rpc GetDescriptor(StoreId) returns (DescriptorResponse);
  rpc ListMethods(StoreId) returns (MethodList);
  
  // Stream subscription
  rpc ListStreams(StoreId) returns (StreamList);
  rpc Subscribe(SubscribeRequest) returns (stream StoreEvent);
}
